--- a/foundry-fund-me-f23/foundry.toml
+++ b/foundry-fund-me-f23/foundry.toml
@@ -2,3 +2,9 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+remapping = '[@chainlink/contracts/src/v0.8/shared/interfaces/AggregatorV3Interface.sol]'
+ffi = true
+fs_permissions = [
+    { access = "read", path = "./broadcast" },
+    { access = "read", path = "./reports" },
+]
